NetBSD Problem Report #40512

From tron@zhadum.org.uk  Thu Jan 29 11:39:13 2009
Return-Path: <tron@zhadum.org.uk>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id BF4ED63C040
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 29 Jan 2009 11:39:13 +0000 (UTC)
Message-Id: <200901291139.n0TBdAnm027258@colwyn.zhadum.org.uk>
Date: Thu, 29 Jan 2009 11:39:10 GMT
From: tron@zhadum.org.uk
Reply-To: tron@zhadum.org.uk
To: gnats-bugs@gnats.NetBSD.org
Subject: "/bin/ksh" doesn't understand $((0x<hex>))
X-Send-Pr-Version: 3.95

>Number:         40512
>Category:       bin
>Synopsis:       "/bin/ksh" doesn't understand $((0x<hex>))
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jan 29 11:40:01 +0000 2009
>Closed-Date:    Sun Aug 02 21:25:34 +0000 2009
>Last-Modified:  Sat Sep 26 18:20:02 +0000 2009
>Originator:     Matthias Scheler
>Release:        NetBSD 5.0_RC1
>Organization:
Matthias Scheler                                  http://zhadum.org.uk/
>Environment:
System: NetBSD colwyn.zhadum.org.uk 5.0_RC1 NetBSD 5.0_RC1 (COLWYN.64) #0: Mon Jan 26 16:38:11 GMT 2009 tron@colwyn.zhadum.org.uk:/src/sys/compile/COLWYN.64 amd64
Architecture: x86_64
Machine: amd64
>Description:
NetBSD's "ksh" doesn't support hex number in evaluations. NetBSD's "sh",
"bash", "zsh" even Solaris's "/bin/ksh" support this.

>How-To-Repeat:
ksh
echo $((0x2a))

>Fix:
None provided.

>Release-Note:

>Audit-Trail:
From: David Laight <dsl@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40512 CVS commit: src/bin/ksh
Date: Sun, 2 Aug 2009 21:24:18 +0000

 Module Name:	src
 Committed By:	dsl
 Date:		Sun Aug  2 21:24:18 UTC 2009

 Modified Files:
 	src/bin/ksh: var.c

 Log Message:
 Support 0xnn for hexadecimal constants - as well as 16#nn.
 While here, make '-' only valid once, and at the start of the number.
 Fixes PR/40512


 To generate a diff of this commit:
 cvs rdiff -u -r1.14 -r1.15 src/bin/ksh/var.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dsl@NetBSD.org
State-Changed-When: Sun, 02 Aug 2009 21:25:34 +0000
State-Changed-Why:
fixed


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40512 CVS commit: [netbsd-5] src/bin/ksh
Date: Sat, 26 Sep 2009 18:19:27 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sat Sep 26 18:19:27 UTC 2009

 Modified Files:
 	src/bin/ksh [netbsd-5]: var.c

 Log Message:
 Pull up following revision(s) (requested by tron in ticket #889):
 	bin/ksh/var.c: revision 1.15
 Support 0xnn for hexadecimal constants - as well as 16#nn.
 While here, make '-' only valid once, and at the start of the number.
 Fixes PR/40512


 To generate a diff of this commit:
 cvs rdiff -u -r1.14 -r1.14.26.1 src/bin/ksh/var.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.