Pull up following revision(s) (requested by tron in ticket #889): 	bin/ksh/var.c: revision 1.15 Support 0xnn for hexadecimal constants - as well as 16#nn. While here, make '-' only valid once, and at the start of the number. Fixes PR/40512